Added all sample content (for now)

--- a/LogbookEntries/entry1.html
+++ b/LogbookEntries/entry1.html
@@ -1,6 +1,6 @@
 <!--LOGBOOK ORGANIZER INFO
-Description: This is a short description
-Tags: Organizational, Imager, DHS
+Description: This is a short description for a sample entry
+Tags: SampleEntry, OtherTag
 !-->
 <html>
 <body>
