Added jsMath support for embedding LaTeX math inside of HTML pages

--- a/LogbookEntries/entry1.html
+++ b/LogbookEntries/entry1.html
@@ -3,10 +3,10 @@ Description: This is a short description for a sample entry
 Tags: SampleEntry, OtherTag
 !-->
 <html>
+<head>
+<SCRIPT SRC="../jsMath/easy/load.js"></SCRIPT>
+</head>
 <body>
-
-
-
 
 
 </body>
