--- a/LogbookEntries/entry1.html
+++ b/LogbookEntries/entry1.html
@@ -4,7 +4,27 @@ Tags: SampleEntry, OtherTag
 !-->
 <html>
 <head>
-<SCRIPT SRC="../jsMath/easy/load.js"></SCRIPT>
+<!--LaTeX in Javascript!-->
+<script src="../../jsMath/easy/load.js"></script>
+<!--Syntax highlighting in Javascript!-->
+<script type="text/javascript" src="../../syntaxhighlighter/scripts/shCore.js"></script>
+<script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushJScript.js"></script>
+<script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushCpp.js"></script>
+<link type="text/css" rel="stylesheet" href="../../syntaxhighlighter/styles/shCoreDefault.css"/>
+<script type="text/javascript">SyntaxHighlighter.all();</script>
+
+<!--Do wrapping with preformatted text!-->
+<style>
+pre
+{
+white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+white-space: -pre-wrap; /* Opera 4 - 6 */
+white-space: -o-pre-wrap; /* Opera 7 */
+white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR...xt/#white-space */
+word-wrap: break-word; /* IE 5.5+ */
+}
+</style>
+
 </head>
 <body>
 
