Python3-ifying stuff

--- a/LogbookEntries/entry1.html
+++ b/LogbookEntries/entry1.html
@@ -5,11 +5,14 @@ Tags: SampleEntry, OtherTag
 <html>
 <head>
 <!--LaTeX in Javascript!-->
-<script src="../../jsMath/easy/load.js"></script>
+<!--<script src="../../jsMath/easy/load.js"></script>!-->
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <!--Syntax highlighting in Javascript!-->
 <script type="text/javascript" src="../../syntaxhighlighter/scripts/shCore.js"></script>
 <script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushJScript.js"></script>
 <script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushCpp.js"></script>
+<script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushMatlabSimple.js"></script>
+<script type="text/javascript" src="../../syntaxhighlighter/scripts/shBrushPython.js"></script>
 <link type="text/css" rel="stylesheet" href="../../syntaxhighlighter/styles/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
